# Rust-pokedex

./: README.md
pokedex/: Cargo.toml  index.html
pokedex/css/: style.css
pokedex/src/: lib.rs  main.rs
