[package]
name = "pokedex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = { version = "0.2.74", features = ["serde-serialize"]  }
wasm-bindgen-futures = "0.4.24"
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
reqwest = "*"
serde_json = "*"
web-sys = "*"
